# Library-app

./: .envsample  README.md  pyproject.toml  requirements.txt
authors/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
authors/migrations/: 0001_initial.py  0002_author.py  0003_delete_authors.py
books/: admin.py  filters.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book_bookstatus_delete_books.py  0002_initial.py  0003_alter_bookstatus_taken_at.py  0003_remove_book_written_date_book_written_year.py  0004_rename_issued_at_bookstatus_taken_at_and_more.py
config/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_fullname.py
